// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock Util Should return result that match snapshot 1`] = `
Object {
  "edges": Array [
    Object {
      "label": "edge-0_0",
      "properties": Array [],
      "source": "node-0",
      "target": "node-0",
    },
    Object {
      "label": "edge-0_1",
      "properties": Array [],
      "source": "node-0",
      "target": "node-1",
    },
    Object {
      "label": "edge-0_2",
      "properties": Array [],
      "source": "node-0",
      "target": "node-2",
    },
    Object {
      "label": "edge-0_3",
      "properties": Array [],
      "source": "node-0",
      "target": "node-3",
    },
    Object {
      "label": "edge-0_4",
      "properties": Array [],
      "source": "node-0",
      "target": "node-4",
    },
    Object {
      "label": "edge-0_5",
      "properties": Array [],
      "source": "node-0",
      "target": "node-5",
    },
    Object {
      "label": "edge-0_6",
      "properties": Array [],
      "source": "node-0",
      "target": "node-6",
    },
    Object {
      "label": "edge-0_7",
      "properties": Array [],
      "source": "node-0",
      "target": "node-7",
    },
    Object {
      "label": "edge-0_8",
      "properties": Array [],
      "source": "node-0",
      "target": "node-8",
    },
    Object {
      "label": "edge-1_0",
      "properties": Array [],
      "source": "node-1",
      "target": "node-0",
    },
    Object {
      "label": "edge-1_1",
      "properties": Array [],
      "source": "node-1",
      "target": "node-1",
    },
    Object {
      "label": "edge-1_2",
      "properties": Array [],
      "source": "node-1",
      "target": "node-2",
    },
    Object {
      "label": "edge-1_3",
      "properties": Array [],
      "source": "node-1",
      "target": "node-3",
    },
    Object {
      "label": "edge-1_4",
      "properties": Array [],
      "source": "node-1",
      "target": "node-4",
    },
    Object {
      "label": "edge-1_5",
      "properties": Array [],
      "source": "node-1",
      "target": "node-5",
    },
    Object {
      "label": "edge-1_6",
      "properties": Array [],
      "source": "node-1",
      "target": "node-6",
    },
    Object {
      "label": "edge-1_7",
      "properties": Array [],
      "source": "node-1",
      "target": "node-7",
    },
    Object {
      "label": "edge-1_8",
      "properties": Array [],
      "source": "node-1",
      "target": "node-8",
    },
    Object {
      "label": "edge-2_0",
      "properties": Array [],
      "source": "node-2",
      "target": "node-0",
    },
    Object {
      "label": "edge-2_1",
      "properties": Array [],
      "source": "node-2",
      "target": "node-1",
    },
    Object {
      "label": "edge-2_2",
      "properties": Array [],
      "source": "node-2",
      "target": "node-2",
    },
    Object {
      "label": "edge-2_3",
      "properties": Array [],
      "source": "node-2",
      "target": "node-3",
    },
    Object {
      "label": "edge-2_4",
      "properties": Array [],
      "source": "node-2",
      "target": "node-4",
    },
    Object {
      "label": "edge-2_5",
      "properties": Array [],
      "source": "node-2",
      "target": "node-5",
    },
    Object {
      "label": "edge-2_6",
      "properties": Array [],
      "source": "node-2",
      "target": "node-6",
    },
    Object {
      "label": "edge-2_7",
      "properties": Array [],
      "source": "node-2",
      "target": "node-7",
    },
    Object {
      "label": "edge-2_8",
      "properties": Array [],
      "source": "node-2",
      "target": "node-8",
    },
    Object {
      "label": "edge-3_0",
      "properties": Array [],
      "source": "node-3",
      "target": "node-0",
    },
    Object {
      "label": "edge-3_1",
      "properties": Array [],
      "source": "node-3",
      "target": "node-1",
    },
    Object {
      "label": "edge-3_2",
      "properties": Array [],
      "source": "node-3",
      "target": "node-2",
    },
    Object {
      "label": "edge-3_3",
      "properties": Array [],
      "source": "node-3",
      "target": "node-3",
    },
    Object {
      "label": "edge-3_4",
      "properties": Array [],
      "source": "node-3",
      "target": "node-4",
    },
    Object {
      "label": "edge-3_5",
      "properties": Array [],
      "source": "node-3",
      "target": "node-5",
    },
    Object {
      "label": "edge-3_6",
      "properties": Array [],
      "source": "node-3",
      "target": "node-6",
    },
    Object {
      "label": "edge-3_7",
      "properties": Array [],
      "source": "node-3",
      "target": "node-7",
    },
    Object {
      "label": "edge-3_8",
      "properties": Array [],
      "source": "node-3",
      "target": "node-8",
    },
    Object {
      "label": "edge-4_0",
      "properties": Array [],
      "source": "node-4",
      "target": "node-0",
    },
    Object {
      "label": "edge-4_1",
      "properties": Array [],
      "source": "node-4",
      "target": "node-1",
    },
    Object {
      "label": "edge-4_2",
      "properties": Array [],
      "source": "node-4",
      "target": "node-2",
    },
    Object {
      "label": "edge-4_3",
      "properties": Array [],
      "source": "node-4",
      "target": "node-3",
    },
    Object {
      "label": "edge-4_4",
      "properties": Array [],
      "source": "node-4",
      "target": "node-4",
    },
    Object {
      "label": "edge-4_5",
      "properties": Array [],
      "source": "node-4",
      "target": "node-5",
    },
    Object {
      "label": "edge-4_6",
      "properties": Array [],
      "source": "node-4",
      "target": "node-6",
    },
    Object {
      "label": "edge-4_7",
      "properties": Array [],
      "source": "node-4",
      "target": "node-7",
    },
    Object {
      "label": "edge-4_8",
      "properties": Array [],
      "source": "node-4",
      "target": "node-8",
    },
    Object {
      "label": "edge-5_0",
      "properties": Array [],
      "source": "node-5",
      "target": "node-0",
    },
    Object {
      "label": "edge-5_1",
      "properties": Array [],
      "source": "node-5",
      "target": "node-1",
    },
    Object {
      "label": "edge-5_2",
      "properties": Array [],
      "source": "node-5",
      "target": "node-2",
    },
    Object {
      "label": "edge-5_3",
      "properties": Array [],
      "source": "node-5",
      "target": "node-3",
    },
    Object {
      "label": "edge-5_4",
      "properties": Array [],
      "source": "node-5",
      "target": "node-4",
    },
    Object {
      "label": "edge-5_5",
      "properties": Array [],
      "source": "node-5",
      "target": "node-5",
    },
    Object {
      "label": "edge-5_6",
      "properties": Array [],
      "source": "node-5",
      "target": "node-6",
    },
    Object {
      "label": "edge-5_7",
      "properties": Array [],
      "source": "node-5",
      "target": "node-7",
    },
    Object {
      "label": "edge-5_8",
      "properties": Array [],
      "source": "node-5",
      "target": "node-8",
    },
    Object {
      "label": "edge-6_0",
      "properties": Array [],
      "source": "node-6",
      "target": "node-0",
    },
    Object {
      "label": "edge-6_1",
      "properties": Array [],
      "source": "node-6",
      "target": "node-1",
    },
    Object {
      "label": "edge-6_2",
      "properties": Array [],
      "source": "node-6",
      "target": "node-2",
    },
    Object {
      "label": "edge-6_3",
      "properties": Array [],
      "source": "node-6",
      "target": "node-3",
    },
    Object {
      "label": "edge-6_4",
      "properties": Array [],
      "source": "node-6",
      "target": "node-4",
    },
    Object {
      "label": "edge-6_5",
      "properties": Array [],
      "source": "node-6",
      "target": "node-5",
    },
    Object {
      "label": "edge-6_6",
      "properties": Array [],
      "source": "node-6",
      "target": "node-6",
    },
    Object {
      "label": "edge-6_7",
      "properties": Array [],
      "source": "node-6",
      "target": "node-7",
    },
    Object {
      "label": "edge-6_8",
      "properties": Array [],
      "source": "node-6",
      "target": "node-8",
    },
    Object {
      "label": "edge-7_0",
      "properties": Array [],
      "source": "node-7",
      "target": "node-0",
    },
    Object {
      "label": "edge-7_1",
      "properties": Array [],
      "source": "node-7",
      "target": "node-1",
    },
    Object {
      "label": "edge-7_2",
      "properties": Array [],
      "source": "node-7",
      "target": "node-2",
    },
    Object {
      "label": "edge-7_3",
      "properties": Array [],
      "source": "node-7",
      "target": "node-3",
    },
    Object {
      "label": "edge-7_4",
      "properties": Array [],
      "source": "node-7",
      "target": "node-4",
    },
    Object {
      "label": "edge-7_5",
      "properties": Array [],
      "source": "node-7",
      "target": "node-5",
    },
    Object {
      "label": "edge-7_6",
      "properties": Array [],
      "source": "node-7",
      "target": "node-6",
    },
    Object {
      "label": "edge-7_7",
      "properties": Array [],
      "source": "node-7",
      "target": "node-7",
    },
    Object {
      "label": "edge-7_8",
      "properties": Array [],
      "source": "node-7",
      "target": "node-8",
    },
    Object {
      "label": "edge-8_0",
      "properties": Array [],
      "source": "node-8",
      "target": "node-0",
    },
    Object {
      "label": "edge-8_1",
      "properties": Array [],
      "source": "node-8",
      "target": "node-1",
    },
    Object {
      "label": "edge-8_2",
      "properties": Array [],
      "source": "node-8",
      "target": "node-2",
    },
    Object {
      "label": "edge-8_3",
      "properties": Array [],
      "source": "node-8",
      "target": "node-3",
    },
    Object {
      "label": "edge-8_4",
      "properties": Array [],
      "source": "node-8",
      "target": "node-4",
    },
    Object {
      "label": "edge-8_5",
      "properties": Array [],
      "source": "node-8",
      "target": "node-5",
    },
    Object {
      "label": "edge-8_6",
      "properties": Array [],
      "source": "node-8",
      "target": "node-6",
    },
    Object {
      "label": "edge-8_7",
      "properties": Array [],
      "source": "node-8",
      "target": "node-7",
    },
    Object {
      "label": "edge-8_8",
      "properties": Array [],
      "source": "node-8",
      "target": "node-8",
    },
    Object {
      "label": "edge-9_0",
      "properties": Array [],
      "source": "node-9",
      "target": "node-0",
    },
    Object {
      "label": "edge-9_1",
      "properties": Array [],
      "source": "node-9",
      "target": "node-1",
    },
    Object {
      "label": "edge-9_2",
      "properties": Array [],
      "source": "node-9",
      "target": "node-2",
    },
    Object {
      "label": "edge-9_3",
      "properties": Array [],
      "source": "node-9",
      "target": "node-3",
    },
    Object {
      "label": "edge-9_4",
      "properties": Array [],
      "source": "node-9",
      "target": "node-4",
    },
    Object {
      "label": "edge-9_5",
      "properties": Array [],
      "source": "node-9",
      "target": "node-5",
    },
    Object {
      "label": "edge-9_6",
      "properties": Array [],
      "source": "node-9",
      "target": "node-6",
    },
    Object {
      "label": "edge-9_7",
      "properties": Array [],
      "source": "node-9",
      "target": "node-7",
    },
    Object {
      "label": "edge-9_8",
      "properties": Array [],
      "source": "node-9",
      "target": "node-8",
    },
  ],
  "nodes": Array [
    Object {
      "id": "node-0",
      "label": "node-0",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-1",
      "label": "node-1",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-2",
      "label": "node-2",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-3",
      "label": "node-3",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-4",
      "label": "node-4",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-5",
      "label": "node-5",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-6",
      "label": "node-6",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-7",
      "label": "node-7",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-8",
      "label": "node-8",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-9",
      "label": "node-9",
      "properties": Array [],
      "type": "company",
    },
  ],
}
`;

exports[`Mock Util Should return result that match snapshot 2`] = `
Object {
  "edges": Array [
    Object {
      "label": "edge-0_1",
      "properties": Array [],
      "source": "node-0",
      "target": "node-1",
    },
    Object {
      "label": "edge-1_0",
      "properties": Array [],
      "source": "node-1",
      "target": "node-0",
    },
    Object {
      "label": "edge-1_1",
      "properties": Array [],
      "source": "node-1",
      "target": "node-1",
    },
    Object {
      "label": "edge-1_2",
      "properties": Array [],
      "source": "node-1",
      "target": "node-2",
    },
    Object {
      "label": "edge-1_3",
      "properties": Array [],
      "source": "node-1",
      "target": "node-3",
    },
    Object {
      "label": "edge-1_4",
      "properties": Array [],
      "source": "node-1",
      "target": "node-4",
    },
    Object {
      "label": "edge-1_5",
      "properties": Array [],
      "source": "node-1",
      "target": "node-5",
    },
    Object {
      "label": "edge-1_6",
      "properties": Array [],
      "source": "node-1",
      "target": "node-6",
    },
    Object {
      "label": "edge-1_7",
      "properties": Array [],
      "source": "node-1",
      "target": "node-7",
    },
    Object {
      "label": "edge-1_8",
      "properties": Array [],
      "source": "node-1",
      "target": "node-8",
    },
    Object {
      "label": "edge-2_1",
      "properties": Array [],
      "source": "node-2",
      "target": "node-1",
    },
    Object {
      "label": "edge-3_1",
      "properties": Array [],
      "source": "node-3",
      "target": "node-1",
    },
    Object {
      "label": "edge-4_1",
      "properties": Array [],
      "source": "node-4",
      "target": "node-1",
    },
    Object {
      "label": "edge-5_1",
      "properties": Array [],
      "source": "node-5",
      "target": "node-1",
    },
    Object {
      "label": "edge-6_1",
      "properties": Array [],
      "source": "node-6",
      "target": "node-1",
    },
    Object {
      "label": "edge-7_1",
      "properties": Array [],
      "source": "node-7",
      "target": "node-1",
    },
    Object {
      "label": "edge-8_1",
      "properties": Array [],
      "source": "node-8",
      "target": "node-1",
    },
    Object {
      "label": "edge-9_1",
      "properties": Array [],
      "source": "node-9",
      "target": "node-1",
    },
  ],
  "nodes": Array [
    Object {
      "id": "node-0",
      "label": "node-0",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-1",
      "label": "node-1",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-2",
      "label": "node-2",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-3",
      "label": "node-3",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-4",
      "label": "node-4",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-5",
      "label": "node-5",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-6",
      "label": "node-6",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-7",
      "label": "node-7",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-8",
      "label": "node-8",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-9",
      "label": "node-9",
      "properties": Array [],
      "type": "company",
    },
  ],
}
`;

exports[`Mock Util Should return result that match snapshot 3`] = `
Object {
  "edges": Array [
    Object {
      "label": "edge-0_0",
      "properties": Array [],
      "source": "node-0",
      "target": "node-0",
    },
    Object {
      "label": "edge-0_1",
      "properties": Array [],
      "source": "node-0",
      "target": "node-1",
    },
    Object {
      "label": "edge-0_2",
      "properties": Array [],
      "source": "node-0",
      "target": "node-2",
    },
    Object {
      "label": "edge-0_3",
      "properties": Array [],
      "source": "node-0",
      "target": "node-3",
    },
    Object {
      "label": "edge-0_4",
      "properties": Array [],
      "source": "node-0",
      "target": "node-4",
    },
    Object {
      "label": "edge-0_5",
      "properties": Array [],
      "source": "node-0",
      "target": "node-5",
    },
    Object {
      "label": "edge-0_6",
      "properties": Array [],
      "source": "node-0",
      "target": "node-6",
    },
    Object {
      "label": "edge-0_7",
      "properties": Array [],
      "source": "node-0",
      "target": "node-7",
    },
    Object {
      "label": "edge-0_8",
      "properties": Array [],
      "source": "node-0",
      "target": "node-8",
    },
    Object {
      "label": "edge-1_0",
      "properties": Array [],
      "source": "node-1",
      "target": "node-0",
    },
    Object {
      "label": "edge-2_0",
      "properties": Array [],
      "source": "node-2",
      "target": "node-0",
    },
    Object {
      "label": "edge-3_0",
      "properties": Array [],
      "source": "node-3",
      "target": "node-0",
    },
    Object {
      "label": "edge-4_0",
      "properties": Array [],
      "source": "node-4",
      "target": "node-0",
    },
    Object {
      "label": "edge-5_0",
      "properties": Array [],
      "source": "node-5",
      "target": "node-0",
    },
    Object {
      "label": "edge-6_0",
      "properties": Array [],
      "source": "node-6",
      "target": "node-0",
    },
    Object {
      "label": "edge-7_0",
      "properties": Array [],
      "source": "node-7",
      "target": "node-0",
    },
    Object {
      "label": "edge-8_0",
      "properties": Array [],
      "source": "node-8",
      "target": "node-0",
    },
    Object {
      "label": "edge-9_0",
      "properties": Array [],
      "source": "node-9",
      "target": "node-0",
    },
  ],
  "nodes": Array [
    Object {
      "id": "node-0",
      "label": "node-0",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-1",
      "label": "node-1",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-2",
      "label": "node-2",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-3",
      "label": "node-3",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-4",
      "label": "node-4",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-5",
      "label": "node-5",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-6",
      "label": "node-6",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-7",
      "label": "node-7",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-8",
      "label": "node-8",
      "properties": Array [],
      "type": "company",
    },
    Object {
      "id": "node-9",
      "label": "node-9",
      "properties": Array [],
      "type": "company",
    },
  ],
}
`;

exports[`Mock Util Should return result that match snapshot 4`] = `
Object {
  "edges": Array [
    Object {
      "data": Object {
        "label": "edge-0_0",
        "properties": Array [],
        "source": "node-0",
        "target": "node-0",
      },
      "label": "edge-0_0",
      "source": "node-0",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-0_1",
        "properties": Array [],
        "source": "node-0",
        "target": "node-1",
      },
      "label": "edge-0_1",
      "source": "node-0",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-0_2",
        "properties": Array [],
        "source": "node-0",
        "target": "node-2",
      },
      "label": "edge-0_2",
      "source": "node-0",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-0_3",
        "properties": Array [],
        "source": "node-0",
        "target": "node-3",
      },
      "label": "edge-0_3",
      "source": "node-0",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-0_4",
        "properties": Array [],
        "source": "node-0",
        "target": "node-4",
      },
      "label": "edge-0_4",
      "source": "node-0",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-0_5",
        "properties": Array [],
        "source": "node-0",
        "target": "node-5",
      },
      "label": "edge-0_5",
      "source": "node-0",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-0_6",
        "properties": Array [],
        "source": "node-0",
        "target": "node-6",
      },
      "label": "edge-0_6",
      "source": "node-0",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-0_7",
        "properties": Array [],
        "source": "node-0",
        "target": "node-7",
      },
      "label": "edge-0_7",
      "source": "node-0",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-0_8",
        "properties": Array [],
        "source": "node-0",
        "target": "node-8",
      },
      "label": "edge-0_8",
      "source": "node-0",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-1_0",
        "properties": Array [],
        "source": "node-1",
        "target": "node-0",
      },
      "label": "edge-1_0",
      "source": "node-1",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-1_1",
        "properties": Array [],
        "source": "node-1",
        "target": "node-1",
      },
      "label": "edge-1_1",
      "source": "node-1",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-1_2",
        "properties": Array [],
        "source": "node-1",
        "target": "node-2",
      },
      "label": "edge-1_2",
      "source": "node-1",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-1_3",
        "properties": Array [],
        "source": "node-1",
        "target": "node-3",
      },
      "label": "edge-1_3",
      "source": "node-1",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-1_4",
        "properties": Array [],
        "source": "node-1",
        "target": "node-4",
      },
      "label": "edge-1_4",
      "source": "node-1",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-1_5",
        "properties": Array [],
        "source": "node-1",
        "target": "node-5",
      },
      "label": "edge-1_5",
      "source": "node-1",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-1_6",
        "properties": Array [],
        "source": "node-1",
        "target": "node-6",
      },
      "label": "edge-1_6",
      "source": "node-1",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-1_7",
        "properties": Array [],
        "source": "node-1",
        "target": "node-7",
      },
      "label": "edge-1_7",
      "source": "node-1",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-1_8",
        "properties": Array [],
        "source": "node-1",
        "target": "node-8",
      },
      "label": "edge-1_8",
      "source": "node-1",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-2_0",
        "properties": Array [],
        "source": "node-2",
        "target": "node-0",
      },
      "label": "edge-2_0",
      "source": "node-2",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-2_1",
        "properties": Array [],
        "source": "node-2",
        "target": "node-1",
      },
      "label": "edge-2_1",
      "source": "node-2",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-2_2",
        "properties": Array [],
        "source": "node-2",
        "target": "node-2",
      },
      "label": "edge-2_2",
      "source": "node-2",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-2_3",
        "properties": Array [],
        "source": "node-2",
        "target": "node-3",
      },
      "label": "edge-2_3",
      "source": "node-2",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-2_4",
        "properties": Array [],
        "source": "node-2",
        "target": "node-4",
      },
      "label": "edge-2_4",
      "source": "node-2",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-2_5",
        "properties": Array [],
        "source": "node-2",
        "target": "node-5",
      },
      "label": "edge-2_5",
      "source": "node-2",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-2_6",
        "properties": Array [],
        "source": "node-2",
        "target": "node-6",
      },
      "label": "edge-2_6",
      "source": "node-2",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-2_7",
        "properties": Array [],
        "source": "node-2",
        "target": "node-7",
      },
      "label": "edge-2_7",
      "source": "node-2",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-2_8",
        "properties": Array [],
        "source": "node-2",
        "target": "node-8",
      },
      "label": "edge-2_8",
      "source": "node-2",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-3_0",
        "properties": Array [],
        "source": "node-3",
        "target": "node-0",
      },
      "label": "edge-3_0",
      "source": "node-3",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-3_1",
        "properties": Array [],
        "source": "node-3",
        "target": "node-1",
      },
      "label": "edge-3_1",
      "source": "node-3",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-3_2",
        "properties": Array [],
        "source": "node-3",
        "target": "node-2",
      },
      "label": "edge-3_2",
      "source": "node-3",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-3_3",
        "properties": Array [],
        "source": "node-3",
        "target": "node-3",
      },
      "label": "edge-3_3",
      "source": "node-3",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-3_4",
        "properties": Array [],
        "source": "node-3",
        "target": "node-4",
      },
      "label": "edge-3_4",
      "source": "node-3",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-3_5",
        "properties": Array [],
        "source": "node-3",
        "target": "node-5",
      },
      "label": "edge-3_5",
      "source": "node-3",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-3_6",
        "properties": Array [],
        "source": "node-3",
        "target": "node-6",
      },
      "label": "edge-3_6",
      "source": "node-3",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-3_7",
        "properties": Array [],
        "source": "node-3",
        "target": "node-7",
      },
      "label": "edge-3_7",
      "source": "node-3",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-3_8",
        "properties": Array [],
        "source": "node-3",
        "target": "node-8",
      },
      "label": "edge-3_8",
      "source": "node-3",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-4_0",
        "properties": Array [],
        "source": "node-4",
        "target": "node-0",
      },
      "label": "edge-4_0",
      "source": "node-4",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-4_1",
        "properties": Array [],
        "source": "node-4",
        "target": "node-1",
      },
      "label": "edge-4_1",
      "source": "node-4",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-4_2",
        "properties": Array [],
        "source": "node-4",
        "target": "node-2",
      },
      "label": "edge-4_2",
      "source": "node-4",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-4_3",
        "properties": Array [],
        "source": "node-4",
        "target": "node-3",
      },
      "label": "edge-4_3",
      "source": "node-4",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-4_4",
        "properties": Array [],
        "source": "node-4",
        "target": "node-4",
      },
      "label": "edge-4_4",
      "source": "node-4",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-4_5",
        "properties": Array [],
        "source": "node-4",
        "target": "node-5",
      },
      "label": "edge-4_5",
      "source": "node-4",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-4_6",
        "properties": Array [],
        "source": "node-4",
        "target": "node-6",
      },
      "label": "edge-4_6",
      "source": "node-4",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-4_7",
        "properties": Array [],
        "source": "node-4",
        "target": "node-7",
      },
      "label": "edge-4_7",
      "source": "node-4",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-4_8",
        "properties": Array [],
        "source": "node-4",
        "target": "node-8",
      },
      "label": "edge-4_8",
      "source": "node-4",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-5_0",
        "properties": Array [],
        "source": "node-5",
        "target": "node-0",
      },
      "label": "edge-5_0",
      "source": "node-5",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-5_1",
        "properties": Array [],
        "source": "node-5",
        "target": "node-1",
      },
      "label": "edge-5_1",
      "source": "node-5",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-5_2",
        "properties": Array [],
        "source": "node-5",
        "target": "node-2",
      },
      "label": "edge-5_2",
      "source": "node-5",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-5_3",
        "properties": Array [],
        "source": "node-5",
        "target": "node-3",
      },
      "label": "edge-5_3",
      "source": "node-5",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-5_4",
        "properties": Array [],
        "source": "node-5",
        "target": "node-4",
      },
      "label": "edge-5_4",
      "source": "node-5",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-5_5",
        "properties": Array [],
        "source": "node-5",
        "target": "node-5",
      },
      "label": "edge-5_5",
      "source": "node-5",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-5_6",
        "properties": Array [],
        "source": "node-5",
        "target": "node-6",
      },
      "label": "edge-5_6",
      "source": "node-5",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-5_7",
        "properties": Array [],
        "source": "node-5",
        "target": "node-7",
      },
      "label": "edge-5_7",
      "source": "node-5",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-5_8",
        "properties": Array [],
        "source": "node-5",
        "target": "node-8",
      },
      "label": "edge-5_8",
      "source": "node-5",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-6_0",
        "properties": Array [],
        "source": "node-6",
        "target": "node-0",
      },
      "label": "edge-6_0",
      "source": "node-6",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-6_1",
        "properties": Array [],
        "source": "node-6",
        "target": "node-1",
      },
      "label": "edge-6_1",
      "source": "node-6",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-6_2",
        "properties": Array [],
        "source": "node-6",
        "target": "node-2",
      },
      "label": "edge-6_2",
      "source": "node-6",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-6_3",
        "properties": Array [],
        "source": "node-6",
        "target": "node-3",
      },
      "label": "edge-6_3",
      "source": "node-6",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-6_4",
        "properties": Array [],
        "source": "node-6",
        "target": "node-4",
      },
      "label": "edge-6_4",
      "source": "node-6",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-6_5",
        "properties": Array [],
        "source": "node-6",
        "target": "node-5",
      },
      "label": "edge-6_5",
      "source": "node-6",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-6_6",
        "properties": Array [],
        "source": "node-6",
        "target": "node-6",
      },
      "label": "edge-6_6",
      "source": "node-6",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-6_7",
        "properties": Array [],
        "source": "node-6",
        "target": "node-7",
      },
      "label": "edge-6_7",
      "source": "node-6",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-6_8",
        "properties": Array [],
        "source": "node-6",
        "target": "node-8",
      },
      "label": "edge-6_8",
      "source": "node-6",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-7_0",
        "properties": Array [],
        "source": "node-7",
        "target": "node-0",
      },
      "label": "edge-7_0",
      "source": "node-7",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-7_1",
        "properties": Array [],
        "source": "node-7",
        "target": "node-1",
      },
      "label": "edge-7_1",
      "source": "node-7",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-7_2",
        "properties": Array [],
        "source": "node-7",
        "target": "node-2",
      },
      "label": "edge-7_2",
      "source": "node-7",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-7_3",
        "properties": Array [],
        "source": "node-7",
        "target": "node-3",
      },
      "label": "edge-7_3",
      "source": "node-7",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-7_4",
        "properties": Array [],
        "source": "node-7",
        "target": "node-4",
      },
      "label": "edge-7_4",
      "source": "node-7",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-7_5",
        "properties": Array [],
        "source": "node-7",
        "target": "node-5",
      },
      "label": "edge-7_5",
      "source": "node-7",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-7_6",
        "properties": Array [],
        "source": "node-7",
        "target": "node-6",
      },
      "label": "edge-7_6",
      "source": "node-7",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-7_7",
        "properties": Array [],
        "source": "node-7",
        "target": "node-7",
      },
      "label": "edge-7_7",
      "source": "node-7",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-7_8",
        "properties": Array [],
        "source": "node-7",
        "target": "node-8",
      },
      "label": "edge-7_8",
      "source": "node-7",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-8_0",
        "properties": Array [],
        "source": "node-8",
        "target": "node-0",
      },
      "label": "edge-8_0",
      "source": "node-8",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-8_1",
        "properties": Array [],
        "source": "node-8",
        "target": "node-1",
      },
      "label": "edge-8_1",
      "source": "node-8",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-8_2",
        "properties": Array [],
        "source": "node-8",
        "target": "node-2",
      },
      "label": "edge-8_2",
      "source": "node-8",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-8_3",
        "properties": Array [],
        "source": "node-8",
        "target": "node-3",
      },
      "label": "edge-8_3",
      "source": "node-8",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-8_4",
        "properties": Array [],
        "source": "node-8",
        "target": "node-4",
      },
      "label": "edge-8_4",
      "source": "node-8",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-8_5",
        "properties": Array [],
        "source": "node-8",
        "target": "node-5",
      },
      "label": "edge-8_5",
      "source": "node-8",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-8_6",
        "properties": Array [],
        "source": "node-8",
        "target": "node-6",
      },
      "label": "edge-8_6",
      "source": "node-8",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-8_7",
        "properties": Array [],
        "source": "node-8",
        "target": "node-7",
      },
      "label": "edge-8_7",
      "source": "node-8",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-8_8",
        "properties": Array [],
        "source": "node-8",
        "target": "node-8",
      },
      "label": "edge-8_8",
      "source": "node-8",
      "target": "node-8",
    },
    Object {
      "data": Object {
        "label": "edge-9_0",
        "properties": Array [],
        "source": "node-9",
        "target": "node-0",
      },
      "label": "edge-9_0",
      "source": "node-9",
      "target": "node-0",
    },
    Object {
      "data": Object {
        "label": "edge-9_1",
        "properties": Array [],
        "source": "node-9",
        "target": "node-1",
      },
      "label": "edge-9_1",
      "source": "node-9",
      "target": "node-1",
    },
    Object {
      "data": Object {
        "label": "edge-9_2",
        "properties": Array [],
        "source": "node-9",
        "target": "node-2",
      },
      "label": "edge-9_2",
      "source": "node-9",
      "target": "node-2",
    },
    Object {
      "data": Object {
        "label": "edge-9_3",
        "properties": Array [],
        "source": "node-9",
        "target": "node-3",
      },
      "label": "edge-9_3",
      "source": "node-9",
      "target": "node-3",
    },
    Object {
      "data": Object {
        "label": "edge-9_4",
        "properties": Array [],
        "source": "node-9",
        "target": "node-4",
      },
      "label": "edge-9_4",
      "source": "node-9",
      "target": "node-4",
    },
    Object {
      "data": Object {
        "label": "edge-9_5",
        "properties": Array [],
        "source": "node-9",
        "target": "node-5",
      },
      "label": "edge-9_5",
      "source": "node-9",
      "target": "node-5",
    },
    Object {
      "data": Object {
        "label": "edge-9_6",
        "properties": Array [],
        "source": "node-9",
        "target": "node-6",
      },
      "label": "edge-9_6",
      "source": "node-9",
      "target": "node-6",
    },
    Object {
      "data": Object {
        "label": "edge-9_7",
        "properties": Array [],
        "source": "node-9",
        "target": "node-7",
      },
      "label": "edge-9_7",
      "source": "node-9",
      "target": "node-7",
    },
    Object {
      "data": Object {
        "label": "edge-9_8",
        "properties": Array [],
        "source": "node-9",
        "target": "node-8",
      },
      "label": "edge-9_8",
      "source": "node-9",
      "target": "node-8",
    },
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "node-0",
        "label": "node-0",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-0",
      "label": "node-node-0",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-1",
        "label": "node-1",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-1",
      "label": "node-node-1",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-2",
        "label": "node-2",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-2",
      "label": "node-node-2",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-3",
        "label": "node-3",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-3",
      "label": "node-node-3",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-4",
        "label": "node-4",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-4",
      "label": "node-node-4",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-5",
        "label": "node-5",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-5",
      "label": "node-node-5",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-6",
        "label": "node-6",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-6",
      "label": "node-node-6",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-7",
        "label": "node-7",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-7",
      "label": "node-node-7",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-8",
        "label": "node-8",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-8",
      "label": "node-node-8",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
    Object {
      "data": Object {
        "id": "node-9",
        "label": "node-9",
        "properties": Array [],
        "type": "company",
      },
      "id": "node-9",
      "label": "node-node-9",
      "shape": "CircleNode",
      "style": Object {
        "nodeSize": 24,
      },
    },
  ],
}
`;
